demo2/depl-back1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: back1
  name: back1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: back1
    spec:
      containers:
      - image: sebv004/demo-2:1.0
        name: demo-2
        resources: {}
        ports:
        - containerPort: 5000
status: {}
