demo2/svc-back1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: back1
  name: back1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: back1
  type: ClusterIP
status:
  loadBalancer: {}
